--- a/index.css
+++ b/index.css
@@ -154,6 +154,12 @@ hgroup{
     font-size: 1rem;
 }
 
+.extra-info {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 
 @media(max-width: 400px){
 
