--- a/index.css
+++ b/index.css
@@ -148,7 +148,6 @@ hgroup{
 .extraInfo-container {
     display: flex;
     flex-direction: column;
-    gap: 1em;
     align-items: center;
     color: white;
     font-size: 1rem;
@@ -158,6 +157,13 @@ hgroup{
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+span {
+    margin-bottom: 0.75em;
+}
+.info-bottom {
+    margin-bottom: 0.5em;
 }
 
 
