--- a/index.css
+++ b/index.css
@@ -161,13 +161,15 @@ hgroup{
 }
 
 .extraInfo-container span {
-    font-size: 2rem;       /* normalize icons */
+    font-size: 1.5rem; 
     margin-bottom: 0.5em;
     width: 2em;
     height: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+
 
 }
 
