adding line-height of 2em to span

--- a/index.css
+++ b/index.css
@@ -169,8 +169,7 @@ hgroup{
     justify-content: center;
     align-items: center;
     text-align: center;
-
-
+    line-height: 2em;
 }
 
 .info-bottom {
