--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@
     width: 95%;
     margin: 1em auto;
     background-image: linear-gradient(to right, #327dbb, #7ab5e6);
-    overflow: hidden;
 }
 .sub-container{
     border-radius: 1em;
@@ -26,16 +25,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
+    height:45vh;
 }
 
 .main {
-    height: 20em;
     background-color:#469adf;
     padding: 1em;
     border-radius: 1em;
     border: none;
-    height: 50vh;
+    height: 45vh;
     
 }
 
@@ -45,10 +43,6 @@
 
 .weather {
     font-size: 2.5rem;
-}
-
-.sub-container {
-    height: 50vh;
 }
 
 .unit-toggle {
@@ -72,18 +66,17 @@
     border-radius: 50%;
     font-size: 170%;
     font-weight: 700;
+    border: none;
     cursor: pointer;
 }
 
 .fahrenheit {
     background-color:white;
-    border: none;
     color:#469adf;
 }
 
 .celsius {
     background-color:  #8fc5f1;
-    border: none;
     color:white;
 }
 
@@ -100,12 +93,12 @@
     
 }
 input::placeholder {
-    text-indent: 0.75em;   /* looks like margin-left */
+    text-indent: 0.75em;
     font-size: 1rem;
     color:white;
 }
 
-hgroup{
+.header{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -171,10 +164,16 @@ hgroup{
     text-align: center;
     line-height: 2em;
     color: white;
+
+
 }
 
 .info-bottom {
     margin-bottom: 0.5em;
+}
+
+.wind-span {
+    padding-top: 0.25em;
 }
 
 
